@@ -1,3 +1,5 @@
+* Make Event#stop return the event wrapper to support method chaining. [jdalton, Johan Arensman]
+
 * Remove fuse.Array.create() in favor of using fuse.Array.from(3) when creating an array with one numeric value. [jddalton]
 
 * Remove fuse.dom.Element.create() in favor of just calling fuse.dom.Element(). [jddalton]
